--- a/history.txt
+++ b/history.txt
@@ -3,3 +3,18 @@ https://ucsd.edu
 https://www.engr.ucr.edu/covid-19-information-page
 https://www.cs.ucr.edu/news/cse-professor-received-doctoral-dissertation-faculty-award
 https://www.cs.ucr.edu/news/cse-professor-papalexakis-received-the-nsf-career-award
+https://www.cs.ucr.edu/news/icpc-team-advances-to-north-american-division-championship
+https://www.cs.ucr.edu/news
+https://www.cs.ucr.edu/about/events
+https://www.cs.ucr.edu/about/distinguished-lectures
+https://library.ucr.edu
+https://campusstatus.ucr.edu/
+https://campusstore.ucr.edu/
+https://diversity.ucr.edu/
+https://campusmap.ucr.edu/
+https://www.ucr.edu/about/visitors
+https://campusmap.ucr.edu/?loc=CHUNG
+mailto:contact@cs.ucr.edu
+https://www.cs.ucr.edu/department-intranet
+https://twitter.com/ucr_cse
+https://www.facebook.com/UCRCompSciEng
